--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.0.5",
     "axios": "^1.3.5",
+    "env": "^0.0.2",
     "howler": "^2.2.3",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
